# it_cpp_prj

ispu_remove_dbl_spaces/: !_read_me.txt  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  text_long.txt  text_short.txt
ispu_uppercase_letters/: !_read_me.txt  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  text_short.txt
